[package]
name = "stellar-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
ed25519-dalek = "2.1.1"
hex = "0.4"
bip39 = { version = "2.1.0", features = ["rand"] }
