[package]
name = "stellar-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# stellar_sdk = "0.1.4"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "pkcs8",
    "digest",
] }
hex = "0.4"
bip39 = { version = "2.1.0", features = ["rand"] }
serde_json = "1.0.138"
crc = "3.2.1"
data-encoding = { version = "2.8.0", features = ["alloc"] }
rand = { version = "0.8", features = ["std"] }
aes = "0.8.4"
sha2 = "0.10.8"
block-modes = "0.9.1"
base32 = "0.5.1"
curve25519-dalek = "4.1.3"
ed25519 = "2.2.3"
anyhow = "1.0.96"
xdr-rs-serialize = "0.3.1"
stellar-base = "0.6.0"
chrono = "0.4.39"
